--- a/InslyTests.csproj
+++ b/InslyTests.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0"/>
     <PackageReference Include="Selenium.Support" Version="3.141.0"/>
     <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.23.0"/>
+    <PackageReference Include="SpecFlow" Version="2.4.1"/>
   </ItemGroup>
 </Project>
