--- a/Insly.Tests/Insly.Tests/packages.config
+++ b/Insly.Tests/Insly.Tests/packages.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngleSharp" version="0.13.0" targetFramework="net472" />
+  <package id="AngleSharp" version="0.14.0" targetFramework="net472" />
+  <package id="Microsoft.CodeCoverage" version="16.5.0" targetFramework="net472" />
+  <package id="Microsoft.NET.Test.Sdk" version="16.5.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
+  <package id="Selenium.WebDriver.GeckoDriver" version="0.26.0.1" targetFramework="net472" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net472" />
-  <package id="WebDriverManager" version="2.9.0" targetFramework="net472" />
+  <package id="WebDriverManager" version="2.9.1" targetFramework="net472" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
